--- a/styles/abstract/_variables.scss
+++ b/styles/abstract/_variables.scss
@@ -6,3 +6,16 @@ $gutter-vertical-small: 6rem;
 
 //FONT
 $default-font-size: 1.6rem;
+
+//COLORS
+$color-text-light: #FFFFFF;
+$color-text-dark: #333B41;
+$color-heading: #000000;
+$color-primary: #F9804B;
+$color-gray-medium: #BDBDBD;
+$color-gray-light: #F1F3F2;
+$color-yellow: #FFEE2E;
+$color-green: #4B9200;
+
+//GENERAL
+$content-width: 116rem;
