--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,11 +1,11 @@
 //@import "abstract/functions";
-//@import "abstract/mixins";
+@import "abstract/mixins";
 @import "abstract/variables";
 //
 //
-//@import "base/base";
+@import "base/base";
 //@import "base/animations";
-//@import "base/typografy";
+@import "base/typografy";
 //@import "base/utilities";
 //
 //@import "components/bg-video";
