--- a/styles/base/_typografy.scss
+++ b/styles/base/_typografy.scss
@@ -19,5 +19,26 @@ body {
 }
 
 .heading-secondary{
-
+  text-align: left;
+  font-size: 4.8rem;
+  &__orange{
+    color: $color-primary;
+    text-align: center;
+  }
 }
+
+.heading-tertiary {
+  text-align: center;
+  font-size: 3.6rem;
+}
+
+.heading-quaternary{
+  text-align: left;
+  font-size: 2.4rem;
+}
+
+.paragraph{
+  text-align: left;
+  font-size: $default-font-size;
+}
+
