--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,4 +1,9 @@
-.welcome{
+.wrapper{
+  max-width: 116rem;
+  margin: auto;
+}
+
+.section-welcome{
   background-image: url(../img/Giant_Panda.png) ;
   padding: 25rem 0;
 }
