feat: styles updated

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box;
-  padding: 0.5rem; }
+  box-sizing: border-box; }
 
 body {
   font-family: "Roboto", sans-serif;
@@ -47,9 +46,23 @@ body {
   font-size: 1.6rem; }
 
 .header {
-  height: 100%;
+  font-size: 1.6rem;
+  line-height: 2.24rem;
+  color: #FFFFFF;
   background-color: #000000;
-  padding: 5rem 0; }
+  padding: 1.4rem 0; }
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.navigation {
+  display: flex; }
+  .navigation__link {
+    list-style: none;
+    padding: 0 2.5rem;
+    cursor: pointer; }
 
 .row {
   max-width: 114rem;
