--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,7 +9,7 @@
 //@import "base/utilities";
 //
 //@import "components/bg-video";
-//@import "components/button";
+@import "components/button";
 //@import "components/card";
 //@import "components/composition";
 //@import "components/feature-box";
