--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,9 @@ body {
   text-transform: uppercase;
   text-align: center;
   backface-visibility: hidden;
-  font-size: 10.6rem; }
+  font-size: 10.6rem;
+  font-weight: 700;
+  line-height: 75%; }
   .heading-primary__yellow {
     color: #FFEE2E; }
 
@@ -44,6 +46,37 @@ body {
 .paragraph {
   text-align: left;
   font-size: 1.6rem; }
+
+.btn, .btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.6rem;
+  display: inline-block;
+  position: relative;
+  border: none;
+  cursor: pointer; }
+
+.btn-elipse {
+  color: #FFFFFF;
+  background-color: #F9804B;
+  width: 29.8rem;
+  height: 5.4rem;
+  border-radius: 2.5rem; }
+
+.btn-circle {
+  color: #FFFFFF;
+  background-color: #F9804B;
+  width: 6.2rem;
+  height: 6.2rem;
+  border-radius: 5rem; }
+
+.btn-square {
+  color: #FFFFFF;
+  background-color: #F9804B;
+  width: 29.8rem;
+  height: 5.4rem;
+  border-radius: 0.7rem; }
 
 .header {
   font-size: 1.6rem;
@@ -96,4 +129,26 @@ body {
 
 .section-welcome {
   background-image: url(../img/Giant_Panda.png);
-  padding: 25rem 0; }
+  height: 780px; }
+
+.container-welcome {
+  margin-left: 80rem; }
+
+.btn-welcome {
+  position: absolute;
+  margin: 0;
+  left: 50%;
+  transform: translateX(-50%); }
+
+.heading {
+  height: 50rem;
+  width: 40rem;
+  position: relative; }
+
+.circle {
+  height: 46.5rem;
+  width: 46.5rem;
+  background-color: #F9804B;
+  background-size: cover;
+  border-radius: 50%;
+  position: absolute; }
