--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -5,5 +5,33 @@
 
 .section-welcome{
   background-image: url(../img/Giant_Panda.png) ;
-  padding: 25rem 0;
+  height: 780px;
 }
+
+.container-welcome{
+  margin-left: 80rem;
+}
+
+.btn-welcome{
+  position: absolute;
+  margin: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.heading{
+  height: 50rem;
+  width: 40rem;
+  position: relative;
+}
+
+.circle{
+  height: 46.5rem;
+  width: 46.5rem;
+  background-color: $color-primary;
+  background-size: cover;
+  border-radius: 50%;
+  position: absolute;
+}
+
+
