feat: - styles updated - new components added

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,9 @@ body {
 
 .heading-secondary {
   text-align: left;
-  font-size: 4.8rem; }
+  font-size: 4.8rem;
+  line-height: 120%;
+  font-weight: 400; }
   .heading-secondary__orange {
     color: #F9804B;
     text-align: center; }
@@ -46,6 +48,16 @@ body {
 .paragraph {
   text-align: left;
   font-size: 1.6rem; }
+
+.bamboo {
+  margin-top: 14.6rem;
+  height: 40rem; }
+
+.bamboo-text {
+  margin-left: 8.6rem; }
+
+.bamboo-photo {
+  width: 61rem; }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -131,19 +143,19 @@ body {
   background-image: url(../img/Giant_Panda.png);
   height: 780px; }
 
-.container-welcome {
-  margin-left: 80rem; }
-
 .btn-welcome {
   position: absolute;
-  margin: 0;
-  left: 50%;
-  transform: translateX(-50%); }
+  width: 29.8rem;
+  height: 5.4rem;
+  left: calc(50% - 29.8rem/2 + 33.2rem);
+  top: 62.6rem; }
 
 .heading {
-  height: 50rem;
-  width: 40rem;
-  position: relative; }
+  position: absolute;
+  width: 50.031rem;
+  height: 40rem;
+  left: calc(50% - 50.031rem/2 + 33.015rem);
+  top: 16.6rem; }
 
 .circle {
   height: 46.5rem;
@@ -151,4 +163,31 @@ body {
   background-color: #F9804B;
   background-size: cover;
   border-radius: 50%;
-  position: absolute; }
+  position: absolute;
+  left: calc(50% - 46.5rem/2 + 23.95rem);
+  top: 9.2rem; }
+
+.flower_foto1 {
+  position: absolute;
+  width: 29.3rem;
+  height: 60.5rem;
+  left: 140rem;
+  top: 87.2rem; }
+
+.flower_foto2 {
+  position: absolute;
+  width: 29.2rem;
+  height: 46rem;
+  left: 0;
+  top: 214.9rem; }
+
+.flower_foto3 {
+  position: absolute;
+  width: 36.8rem;
+  height: 27.5rem;
+  left: 123.2rem;
+  top: 233.4rem; }
+
+.section-animals {
+  background-color: #FFFFFF;
+  height: 182.2rem; }
