--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,7 +8,7 @@
 @import "base/typografy";
 //@import "base/utilities";
 //
-//@import "components/bg-video";
+@import "components/bamboo";
 @import "components/button";
 //@import "components/card";
 //@import "components/composition";
