--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -8,21 +8,32 @@
   height: 780px;
 }
 
-.container-welcome{
-  margin-left: 80rem;
-}
-
 .btn-welcome{
+  //position: absolute;
+  //margin: 0;
+  //left: 983px;
+  //top: 626px;
+
   position: absolute;
-  margin: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 29.8rem;
+  height: 5.4rem;
+  left: calc(50% - 29.8rem/2 + 33.2rem);
+  top: 62.6rem;
 }
 
 .heading{
-  height: 50rem;
-  width: 40rem;
-  position: relative;
+  //height: 50rem;
+  //width: 40rem;
+  //position: relative;
+  //left: 880px;
+  //top: 96px;
+
+  position: absolute;
+  width: 50.031rem;
+  height: 40rem;
+  left: calc(50% - 50.031rem/2 + 33.015rem);
+  top: 16.6rem;
+
 }
 
 .circle{
@@ -32,6 +43,38 @@
   background-size: cover;
   border-radius: 50%;
   position: absolute;
+  left: calc(50% - 46.5rem/2 + 23.95rem);
+  top: 9.2rem;
 }
 
+.flower_foto1{
+  position: absolute;
+  width: 29.3rem;
+  height: 60.5rem;
+  left: 140rem;
+  top: 87.2rem;
+}
+
+.flower_foto2 {
+  position: absolute;
+  width: 29.2rem;
+  height: 46rem;
+  left: 0;
+  top: 214.9rem;
+}
+
+.flower_foto3{
+  position: absolute;
+  width: 36.8rem;
+  height: 27.5rem;
+  left: 123.2rem;
+  top: 233.4rem;
+}
+
+
+
+.section-animals{
+  background-color: $color-text-light;
+  height: 182.2rem;
+}
 
