--- a/styles/base/_typografy.scss
+++ b/styles/base/_typografy.scss
@@ -23,6 +23,8 @@ body {
 .heading-secondary{
   text-align: left;
   font-size: 4.8rem;
+  line-height: 120%;
+  font-weight: 400;
   &__orange{
     color: $color-primary;
     text-align: center;
